# tt-common

./: .gitignore  DESIGN_SYSTEM.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: 00-docker-build.yml  02-manual-build.yml
design/: README.md
design/tailwind/: package-lock.json  package.json  tailwind.config.js
docs/: poc-tt-auth.md
templates/tt_common/: macros.html
tests/: conftest.py  test_authz.py  test_sso.py  test_sso_replay.py
tt_common/: __init__.py  sso.py  sso_replay.py
tt_common/static/tt_common/css/: inter.css  tigers.css
tt_common/static/tt_common/js/: table_enhancements.js
tt_common/templates/tt_common/: base.html  macros.html
