[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-common"
version = "0.1.13"
description = "Geteilte Bausteine (UI-Layout, spaeter SSO/JWT) fuer den Tigers-Microservice-Stack"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "PyJWT>=2.8",
    "redis>=5.0",
]

[tool.setuptools]
packages = ["tt_common"]

[tool.setuptools.package-data]
tt_common = [
    "templates/tt_common/*.html",
    "static/tt_common/*",
    "static/tt_common/js/*",
]
